src/main/java/com/interceptor/example/user/domain/errors/UserInfoException.java
package com.interceptor.example.user.domain.errors;

public class UserInfoException extends Exception {
  public UserInfoException(String message){
    super(message);
  }
}
